feat: Preventing peaks that are too close in wavelength, with min distance of 50nm.

--- a/data_prep.ipynb
+++ b/data_prep.ipynb
@@ -53,11 +53,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def extract_absorption_data(filepath, threshold=0.01, normalize=True, max_peaks=3, min_distance=5):\n",
+    "def extract_absorption_data(\n",
+    "    filepath, threshold=0.01, normalize=True, max_peaks=3, min_distance=5\n",
+    "):\n",
     "    \"\"\"\n",
     "    Extracts up to three highest absorption maxima and corresponding wavelengths from a .abs.txt file.\n",
-    "    - Now includes distance between peaks for better separation.\n",
     "    - Prevents repeated peaks caused by normalization artifacts.\n",
+    "    - Includes handling for empty files to avoid errors.\n",
     "\n",
     "    Args:\n",
     "        filepath: Path to the .abs.txt file.\n",
@@ -74,29 +76,55 @@
     "            lines = f.readlines()\n",
     "\n",
     "        # Skip header lines\n",
-    "        data_start_index = next(i for i, line in enumerate(lines) if line.strip().startswith(\"Wavelength\")) + 1\n",
+    "        data_start_index = next(\n",
+    "            (\n",
+    "                i\n",
+    "                for i, line in enumerate(lines)\n",
+    "                if line.strip().startswith(\"Wavelength\")\n",
+    "            ),\n",
+    "            None,\n",
+    "        )\n",
+    "\n",
+    "        # If no header is found, return an empty list\n",
+    "        if data_start_index is None:\n",
+    "            print(f\"Warning: No data found in {filepath}.\")\n",
+    "            return []\n",
+    "\n",
+    "        data_start_index += 1  # Move to the data part after the header\n",
     "        wavelengths = []\n",
     "        absorptions = []\n",
     "\n",
     "        for line in lines[data_start_index:]:\n",
     "            parts = line.strip().split()\n",
     "            if len(parts) == 2:\n",
-    "                wavelengths.append(float(parts[0]))\n",
-    "                absorptions.append(float(parts[1]))\n",
+    "                try:\n",
+    "                    wavelengths.append(float(parts[0]))\n",
+    "                    absorptions.append(float(parts[1]))\n",
+    "                except ValueError:\n",
+    "                    print(f\"Invalid data format in {filepath}. Skipping line.\")\n",
+    "                    continue\n",
     "\n",
     "        # Convert to numpy arrays\n",
+    "        if not wavelengths or not absorptions:\n",
+    "            print(f\"Warning: No valid data found in {filepath}.\")\n",
+    "            return []\n",
+    "\n",
     "        wavelengths = np.array(wavelengths)\n",
     "        absorptions = np.array(absorptions)\n",
     "\n",
-    "        # **Normalize the Absorption Values**\n",
-    "        if normalize and absorptions.max() > 0:\n",
+    "        # Check for zero-sized arrays before normalization\n",
+    "        if normalize and len(absorptions) > 0 and absorptions.max() > 0:\n",
     "            absorptions /= absorptions.max()\n",
+    "        else:\n",
+    "            print(\n",
+    "                f\"Warning: Empty or zero max absorption data in {filepath}. Skipping normalization.\"\n",
+    "            )\n",
     "\n",
-    "        # **Identify peaks with separation**\n",
+    "        # Identify peaks with separation of 50nm distance\n",
     "        peaks, _ = find_peaks(absorptions, height=threshold, distance=min_distance)\n",
     "        peak_data = [(wavelengths[i], absorptions[i]) for i in peaks]\n",
     "\n",
-    "        # **Sort by intensity and limit to top N peaks**\n",
+    "        # Sort by intensity and limit to top N peaks\n",
     "        peak_data.sort(key=lambda x: x[1], reverse=True)\n",
     "        peak_data = peak_data[:max_peaks]\n",
     "\n",
@@ -104,7 +132,7 @@
     "\n",
     "    except (FileNotFoundError, ValueError, IndexError) as e:\n",
     "        print(f\"Error processing {filepath}: {e}\")\n",
-    "        return []\n"
+    "        return []"
    ]
   },
   {
@@ -207,6 +235,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Warning: No valid data found in ./PhotochemCAD/Common Compounds/N02_76-54-0_2',7'-Dichlorofluorescein.abs.txt.\n",
       "No valid peaks found in N02_76-54-0_2',7'-Dichlorofluorescein.abs.txt or error during extraction.\n",
       "Failed to retrieve data for synonym '7659-95-2' with status code: 404\n",
       "Trying with name for Betanin\n",
@@ -243,6 +272,7 @@
       "Trying with name for H2TPC\n",
       "Failed to retrieve data for synonym 'H2TPC' with status code: 404\n",
       "Could not retrieve SMILES for H2TPC. Using a placeholder.\n",
+      "Warning: No valid data found in ./PhotochemCAD/Common Compounds/L04_632-99-5_p-Fuchsin.abs.txt.\n",
       "No valid peaks found in L04_632-99-5_p-Fuchsin.abs.txt or error during extraction.\n",
       "Skipping file T15_ZnCOxo-1.abs.txt due to invalid format.\n",
       "Failed to retrieve data for synonym '35984-93-1' with status code: 404\n",
@@ -274,6 +304,7 @@
       "Trying with name for Phloxine_B\n",
       "Failed to retrieve data for synonym 'Phloxine B' with status code: 404\n",
       "Could not retrieve SMILES for Phloxine_B. Using a placeholder.\n",
+      "Warning: No valid data found in ./PhotochemCAD/Common Compounds/K18_51325-91-8_[DCM].abs.txt.\n",
       "No valid peaks found in K18_51325-91-8_[DCM].abs.txt or error during extraction.\n",
       "Failed to retrieve data for synonym '468083-01-4' with status code: 404\n",
       "Trying with name for Perylene_PMI(OR)3\n",
@@ -342,10 +373,10 @@
     "        # Convert SMILES into a list\n",
     "        smiles_list = [s.strip() for s in smiles.splitlines() if s.strip()]\n",
     "\n",
-    "        # Extract up to 3 peaks using modified extraction function**\n",
+    "        # Extract up to 3 peaks using modified extraction function\n",
     "        peaks = extract_absorption_data(filepath, max_peaks=3)\n",
     "\n",
-    "        # Ensure peaks are valid before iterating**\n",
+    "        # Ensure peaks are valid before iterating\n",
     "        if peaks and isinstance(peaks, list) and len(peaks) > 0:\n",
     "            for smile in smiles_list:\n",
     "                for wavelength, absorption in peaks:\n",
