--- a/src/data_prep.ipynb
+++ b/src/data_prep.ipynb
@@ -36,8 +36,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_dir = \"./PhotochemCAD/Common Compounds/\"\n",
-    "output_file = \"./data/molecular_data.csv\""
+    "data_dir = \"./../PhotochemCAD/Common Compounds/\"\n",
+    "output_file = \"./../data/molecular_data.csv\""
    ]
   },
   {
@@ -54,7 +54,7 @@
    "outputs": [],
    "source": [
     "def extract_absorption_data(\n",
-    "    filepath, threshold=0.01, normalize=True, max_peaks=3, min_distance=5\n",
+    "    filepath, threshold=0.01, normalize=True, max_peaks=3, min_distance=50\n",
     "):\n",
     "    \"\"\"\n",
     "    Extracts up to three highest absorption maxima and corresponding wavelengths from a .abs.txt file.\n",
@@ -228,110 +228,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Warning: No valid data found in ./PhotochemCAD/Common Compounds/N02_76-54-0_2',7'-Dichlorofluorescein.abs.txt.\n",
-      "No valid peaks found in N02_76-54-0_2',7'-Dichlorofluorescein.abs.txt or error during extraction.\n",
-      "Failed to retrieve data for synonym '7659-95-2' with status code: 404\n",
-      "Trying with name for Betanin\n",
-      "Failed to retrieve data for synonym '118762-53-1' with status code: 404\n",
-      "Trying with name for 5-Phenyldipyrrin\n",
-      "Failed to retrieve data for synonym '5-Phenyldipyrrin' with status code: 404\n",
-      "Could not retrieve SMILES for 5-Phenyldipyrrin. Using a placeholder.\n",
-      "Failed to retrieve data for synonym '5522-66-7' with status code: 404\n",
-      "Trying with name for Protoporphyrin_IX_dimethyl_ester\n",
-      "Skipping file P04_N,N'-Difluoroboryl-1,9-dimethyl-5-(4-iodophenyl)dipyrrin.abs.txt due to invalid format.\n",
-      "Skipping file Q26_PdTBP(CO2Bu).abs.txt due to invalid format.\n",
-      "Skipping file T14_CuCOxo-1.abs.txt due to invalid format.\n",
-      "Skipping file Q20_ZnTMP+.abs.txt due to invalid format.\n",
-      "Skipping file P06_Bis(5-phenyldipyrrinato)zinc.abs.txt due to invalid format.\n",
-      "Skipping file Q30_ZnTCPH(CO2Me)Ph.abs.txt due to invalid format.\n",
-      "Skipping file Q03_ZnP.abs.txt due to invalid format.\n",
-      "Skipping file T10_CuC-1.abs.txt due to invalid format.\n",
-      "Failed to retrieve data for synonym '15185-47-4' with status code: 404\n",
-      "Trying with name for 1,1'-Diethyl-3,3,3',3'-tetramethylindotricarbocyanine_iodide\n",
-      "Failed to retrieve data for synonym '1,1'-Diethyl-3,3,3',3'-tetramethylindotricarbocyanine iodide' with status code: 404\n",
-      "Could not retrieve SMILES for 1,1'-Diethyl-3,3,3',3'-tetramethylindotricarbocyanine_iodide. Using a placeholder.\n",
-      "Failed to retrieve data for synonym '262280-80-8' with status code: 404\n",
-      "Trying with name for C6F5-Corrole\n",
-      "Failed to retrieve data for synonym 'C6F5-Corrole' with status code: 404\n",
-      "Could not retrieve SMILES for C6F5-Corrole. Using a placeholder.\n",
-      "Failed to retrieve data for synonym '8004-87-3' with status code: 404\n",
-      "Trying with name for Methy_Violet\n",
-      "Failed to retrieve data for synonym 'Methy Violet' with status code: 404\n",
-      "Could not retrieve SMILES for Methy_Violet. Using a placeholder.\n",
-      "Skipping file Q12_MgTMP.abs.txt due to invalid format.\n",
-      "Failed to retrieve data for synonym '1661-03-6' with status code: 404\n",
-      "Trying with name for MgPc\n",
-      "Failed to retrieve data for synonym '2669-65-0' with status code: 404\n",
-      "Trying with name for H2TPC\n",
-      "Failed to retrieve data for synonym 'H2TPC' with status code: 404\n",
-      "Could not retrieve SMILES for H2TPC. Using a placeholder.\n",
-      "Warning: No valid data found in ./PhotochemCAD/Common Compounds/L04_632-99-5_p-Fuchsin.abs.txt.\n",
-      "No valid peaks found in L04_632-99-5_p-Fuchsin.abs.txt or error during extraction.\n",
-      "Skipping file T15_ZnCOxo-1.abs.txt due to invalid format.\n",
-      "Failed to retrieve data for synonym '35984-93-1' with status code: 404\n",
-      "Trying with name for H2Pc(tBu)\n",
-      "Failed to retrieve data for synonym 'H2Pc(tBu)' with status code: 404\n",
-      "Could not retrieve SMILES for H2Pc(tBu). Using a placeholder.\n",
-      "Skipping file Q28_ZnTBP(CO2Me)Ph.abs.txt due to invalid format.\n",
-      "Skipping file Q18_N-Confused_tetraphenylporphyrin.abs.txt due to invalid format.\n",
-      "Skipping file Q19_H4TPP2+.abs.txt due to invalid format.\n",
-      "Failed to retrieve data for synonym '43134-09-4' with status code: 404\n",
-      "Trying with name for Squarylium_dye_III\n",
-      "Skipping file Q27_H2TBP(CO2Me)Ph.abs.txt due to invalid format.\n",
-      "Failed to retrieve data for synonym '14640-21-2' with status code: 404\n",
-      "Trying with name for MgTPP\n",
-      "Failed to retrieve data for synonym 'MgTPP' with status code: 404\n",
-      "Could not retrieve SMILES for MgTPP. Using a placeholder.\n",
-      "No valid peaks found in P01_107798-98-1_5-Phenyldipyrromethane.abs.txt or error during extraction.\n",
-      "Failed to retrieve data for synonym '36530-06-0' with status code: 404\n",
-      "Trying with name for Boron_subphthalocyanine_chloride\n",
-      "Skipping file T12_H2COxo-1.abs.txt due to invalid format.\n",
-      "Skipping file M03_Perylene_PMI(OR).abs.txt due to invalid format.\n",
-      "Skipping file T09_H2C-1.abs.txt due to invalid format.\n",
-      "Skipping file Q34_PdTBP(CO2Bu)Ph.abs.txt due to invalid format.\n",
-      "Skipping file R03_Sapphyrin.abs.txt due to invalid format.\n",
-      "Skipping file Q29_PdTBP(CO2Me)Ph.abs.txt due to invalid format.\n",
-      "Skipping file Q13_ZnTMP.abs.txt due to invalid format.\n",
-      "Skipping file Q25_ZnTBP(CO2Bu).abs.txt due to invalid format.\n",
-      "Failed to retrieve data for synonym '18472-87-2' with status code: 404\n",
-      "Trying with name for Phloxine_B\n",
-      "Failed to retrieve data for synonym 'Phloxine B' with status code: 404\n",
-      "Could not retrieve SMILES for Phloxine_B. Using a placeholder.\n",
-      "Warning: No valid data found in ./PhotochemCAD/Common Compounds/K18_51325-91-8_[DCM].abs.txt.\n",
-      "No valid peaks found in K18_51325-91-8_[DCM].abs.txt or error during extraction.\n",
-      "Failed to retrieve data for synonym '468083-01-4' with status code: 404\n",
-      "Trying with name for Perylene_PMI(OR)3\n",
-      "Failed to retrieve data for synonym 'Perylene PMI(OR)3' with status code: 404\n",
-      "Could not retrieve SMILES for Perylene_PMI(OR)3. Using a placeholder.\n",
-      "Skipping file Q02_MgP.abs.txt due to invalid format.\n",
-      "Skipping file Q31_PdTCPH(CO2Me)Ph.abs.txt due to invalid format.\n",
-      "Failed to retrieve data for synonym '548-24-3' with status code: 404\n",
-      "Trying with name for Eosin_B\n",
-      "Failed to retrieve data for synonym 'Eosin B' with status code: 404\n",
-      "Could not retrieve SMILES for Eosin_B. Using a placeholder.\n",
-      "Skipping file T13_MgCOxo-1.abs.txt due to invalid format.\n",
-      "Skipping file P05_N,N'-Difluoroboryl-1,9-dimethyl-5-[(4-(2-TMS-ethynyl)pheny]dipyrrin.abs.txt due to invalid format.\n",
-      "Failed to retrieve data for synonym '17372-87-1' with status code: 404\n",
-      "Trying with name for Eosin_Y\n",
-      "Failed to retrieve data for synonym 'Eosin Y' with status code: 404\n",
-      "Could not retrieve SMILES for Eosin_Y. Using a placeholder.\n",
-      "Skipping file P03_N,N'-Difluoroboryl-1,9-dimethyl-5-phenydipyrrin.abs.txt due to invalid format.\n",
-      "Skipping file Q24_H2TBP(CO2Bu).abs.txt due to invalid format.\n",
-      "Skipping file P07_Bis(5-mesityldipyrrinato)zinc.abs.txt due to invalid format.\n",
-      "Skipping file A09_ 87-85-4_Hexamethylbenzene.abs.txt due to invalid format.\n",
-      "Skipping file Q32_H2TBP(CO2Bu)Ph.abs.txt due to invalid format.\n",
-      "Skipping file T11_ZnC-1.abs.txt due to invalid format.\n",
-      "Skipping file Q33_ZnTBP(CO2Bu)Ph.abs.txt due to invalid format.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "data = []\n",
     "processed_molecules = set()\n",
@@ -366,9 +265,9 @@
     "        # If both CAS and Name searches fail, fallback to placeholder\n",
     "        if smiles is None:\n",
     "            print(\n",
-    "                f\"Could not retrieve SMILES for {molecule_name}. Using a placeholder.\"\n",
+    "                f\"Could not retrieve SMILES for {molecule_name}. Skipping the molecule.\"\n",
     "            )\n",
-    "            smiles = \"N/A\"\n",
+    "            continue\n",
     "\n",
     "        # Convert SMILES into a list\n",
     "        smiles_list = [s.strip() for s in smiles.splitlines() if s.strip()]\n",
@@ -397,17 +296,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Data saved to ./data/molecular_data.csv\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df = pd.DataFrame(data)\n",
     "df.to_csv(output_file, index=False)\n",
