chore: data/feature extraction improved

--- a/src/data_prep.ipynb
+++ b/src/data_prep.ipynb
@@ -53,82 +53,97 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def extract_absorption_data(\n",
-    "    filepath, threshold=0.01, normalize=True, max_peaks=3, min_distance=50\n",
-    "):\n",
+    "import numpy as np\n",
+    "from scipy.signal import find_peaks\n",
+    "\n",
+    "\n",
+    "def extract_absorption_data(filepath, threshold=0.01, normalize=True, max_peaks=3):\n",
     "    \"\"\"\n",
-    "    Extracts up to three highest absorption maxima and corresponding wavelengths from a .abs.txt file.\n",
-    "    - Prevents repeated peaks caused by normalization artifacts.\n",
-    "    - Includes handling for empty files to avoid errors.\n",
+    "    Extracts up to three highest absorption peaks and their corresponding wavelengths from a .abs.txt file.\n",
+    "\n",
+    "    Steps:\n",
+    "      1. Reads the file and identifies the header (expected to start with \"Wavelength\").\n",
+    "      2. Extracts wavelengths and absorption values from the lines following the header.\n",
+    "      3. Optionally normalizes the absorption values to a [0, 1] range.\n",
+    "      4. Finds all peaks in the absorption data.\n",
+    "      5. Sorts and returns the top `max_peaks` peaks based on the highest absorption values.\n",
     "\n",
     "    Args:\n",
-    "        filepath: Path to the .abs.txt file.\n",
-    "        threshold: Minimum absorbance value for a peak to be considered significant.\n",
-    "        normalize: If True, normalize absorbance values between 0 and 1.\n",
-    "        max_peaks: The maximum number of peaks to extract.\n",
-    "        min_distance: Minimum distance between peaks to prevent closely grouped peaks.\n",
+    "        filepath (str): Path to the .abs.txt file.\n",
+    "        threshold (float): Minimum absorbance value for a peak to be considered.\n",
+    "        normalize (bool): If True, normalize the absorption values between 0 and 1.\n",
+    "        max_peaks (int): The maximum number of peaks to extract.\n",
     "\n",
     "    Returns:\n",
-    "        A list of tuples containing (wavelength, absorption) for the top peaks.\n",
+    "        list of tuples: Each tuple contains (wavelength, absorption) for one of the top peaks.\n",
     "    \"\"\"\n",
     "    try:\n",
-    "        with open(filepath, \"r\") as f:\n",
-    "            lines = f.readlines()\n",
+    "        with open(filepath, \"r\") as file:\n",
+    "            lines = file.readlines()\n",
     "\n",
-    "        # Skip header lines\n",
-    "        data_start_index = next(\n",
-    "            (\n",
-    "                i\n",
-    "                for i, line in enumerate(lines)\n",
-    "                if line.strip().startswith(\"Wavelength\")\n",
-    "            ),\n",
-    "            None,\n",
-    "        )\n",
+    "        # Locate the header that starts with \"Wavelength\"\n",
+    "        header_index = None\n",
+    "        for i, line in enumerate(lines):\n",
+    "            if line.strip().startswith(\"Wavelength\"):\n",
+    "                header_index = i\n",
+    "                break\n",
     "\n",
-    "        # If no header is found, return an empty list\n",
-    "        if data_start_index is None:\n",
-    "            print(f\"Warning: No data found in {filepath}.\")\n",
+    "        if header_index is None:\n",
+    "            print(\n",
+    "                f\"Warning: No header line starting with 'Wavelength' found in {filepath}.\"\n",
+    "            )\n",
     "            return []\n",
     "\n",
-    "        data_start_index += 1  # Move to the data part after the header\n",
+    "        # Extract data lines following the header\n",
+    "        data_lines = lines[header_index + 1 :]\n",
     "        wavelengths = []\n",
     "        absorptions = []\n",
     "\n",
-    "        for line in lines[data_start_index:]:\n",
+    "        for line in data_lines:\n",
     "            parts = line.strip().split()\n",
-    "            if len(parts) == 2:\n",
+    "            if len(parts) >= 2:\n",
     "                try:\n",
     "                    wavelengths.append(float(parts[0]))\n",
     "                    absorptions.append(float(parts[1]))\n",
     "                except ValueError:\n",
-    "                    print(f\"Invalid data format in {filepath}. Skipping line.\")\n",
+    "                    print(\n",
+    "                        f\"Warning: Could not convert line to float in {filepath}: {line.strip()}\"\n",
+    "                    )\n",
     "                    continue\n",
     "\n",
-    "        # Convert to numpy arrays\n",
     "        if not wavelengths or not absorptions:\n",
     "            print(f\"Warning: No valid data found in {filepath}.\")\n",
     "            return []\n",
     "\n",
+    "        # Convert lists to numpy arrays for easy numerical operations\n",
     "        wavelengths = np.array(wavelengths)\n",
     "        absorptions = np.array(absorptions)\n",
     "\n",
-    "        # Check for zero-sized arrays before normalization\n",
-    "        if normalize and len(absorptions) > 0 and absorptions.max() > 0:\n",
-    "            absorptions /= absorptions.max()\n",
-    "        else:\n",
-    "            print(\n",
-    "                f\"Warning: Empty or zero max absorption data in {filepath}. Skipping normalization.\"\n",
-    "            )\n",
+    "        # Normalize absorption values to [0, 1] if needed\n",
+    "        if normalize:\n",
+    "            max_val = absorptions.max()\n",
+    "            if max_val > 0:\n",
+    "                absorptions = absorptions / max_val\n",
+    "            else:\n",
+    "                print(\n",
+    "                    f\"Warning: Maximum absorption value is zero in {filepath}. Skipping normalization.\"\n",
+    "                )\n",
     "\n",
-    "        # Identify peaks with separation of 50nm distance\n",
-    "        peaks, _ = find_peaks(absorptions, height=threshold, distance=min_distance)\n",
+    "        # Detect all peaks\n",
+    "        peaks, properties = find_peaks(absorptions, height=threshold)\n",
+    "\n",
+    "        if peaks.size == 0:\n",
+    "            print(f\"No peaks found in {filepath} with threshold {threshold}.\")\n",
+    "            return []\n",
+    "\n",
+    "        # Build a list of tuples (wavelength, absorption) for each detected peak\n",
     "        peak_data = [(wavelengths[i], absorptions[i]) for i in peaks]\n",
     "\n",
-    "        # Sort by intensity and limit to top N peaks\n",
+    "        # Sort peaks by absorption value in descending order and select the top ones\n",
     "        peak_data.sort(key=lambda x: x[1], reverse=True)\n",
-    "        peak_data = peak_data[:max_peaks]\n",
+    "        top_peaks = peak_data[:max_peaks]\n",
     "\n",
-    "        return peak_data\n",
+    "        return top_peaks\n",
     "\n",
     "    except (FileNotFoundError, ValueError, IndexError) as e:\n",
     "        print(f\"Error processing {filepath}: {e}\")\n",
@@ -228,9 +243,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Failed to retrieve data for synonym '7659-95-2' with status code: 404\n",
+      "Trying with name for Betanin\n",
+      "Failed to retrieve data for synonym '118762-53-1' with status code: 404\n",
+      "Trying with name for 5-Phenyldipyrrin\n",
+      "Failed to retrieve data for synonym '5-Phenyldipyrrin' with status code: 404\n",
+      "Could not retrieve SMILES for 5-Phenyldipyrrin. Skipping the molecule.\n",
+      "Skipping file P04_N,N'-Difluoroboryl-1,9-dimethyl-5-(4-iodophenyl)dipyrrin.abs.txt due to invalid format.\n",
+      "Skipping file Q26_PdTBP(CO2Bu).abs.txt due to invalid format.\n",
+      "Skipping file T14_CuCOxo-1.abs.txt due to invalid format.\n",
+      "Skipping file Q20_ZnTMP+.abs.txt due to invalid format.\n",
+      "Skipping file P06_Bis(5-phenyldipyrrinato)zinc.abs.txt due to invalid format.\n",
+      "Skipping file Q30_ZnTCPH(CO2Me)Ph.abs.txt due to invalid format.\n",
+      "Skipping file Q03_ZnP.abs.txt due to invalid format.\n",
+      "Skipping file T10_CuC-1.abs.txt due to invalid format.\n",
+      "Failed to retrieve data for synonym '15185-47-4' with status code: 404\n",
+      "Trying with name for 1,1'-Diethyl-3,3,3',3'-tetramethylindotricarbocyanine_iodide\n",
+      "Failed to retrieve data for synonym '1,1'-Diethyl-3,3,3',3'-tetramethylindotricarbocyanine iodide' with status code: 404\n",
+      "Could not retrieve SMILES for 1,1'-Diethyl-3,3,3',3'-tetramethylindotricarbocyanine_iodide. Skipping the molecule.\n",
+      "Failed to retrieve data for synonym '262280-80-8' with status code: 404\n",
+      "Trying with name for C6F5-Corrole\n",
+      "Failed to retrieve data for synonym 'C6F5-Corrole' with status code: 404\n",
+      "Could not retrieve SMILES for C6F5-Corrole. Skipping the molecule.\n",
+      "Failed to retrieve data for synonym '8004-87-3' with status code: 404\n",
+      "Trying with name for Methy_Violet\n",
+      "Failed to retrieve data for synonym 'Methy Violet' with status code: 404\n",
+      "Could not retrieve SMILES for Methy_Violet. Skipping the molecule.\n",
+      "Skipping file Q12_MgTMP.abs.txt due to invalid format.\n",
+      "Failed to retrieve data for synonym '1661-03-6' with status code: 404\n",
+      "Trying with name for MgPc\n",
+      "Failed to retrieve data for synonym '2669-65-0' with status code: 404\n",
+      "Trying with name for H2TPC\n",
+      "Failed to retrieve data for synonym 'H2TPC' with status code: 404\n",
+      "Could not retrieve SMILES for H2TPC. Skipping the molecule.\n",
+      "Skipping file T15_ZnCOxo-1.abs.txt due to invalid format.\n",
+      "Failed to retrieve data for synonym '35984-93-1' with status code: 404\n",
+      "Trying with name for H2Pc(tBu)\n",
+      "Failed to retrieve data for synonym 'H2Pc(tBu)' with status code: 404\n",
+      "Could not retrieve SMILES for H2Pc(tBu). Skipping the molecule.\n",
+      "Skipping file Q28_ZnTBP(CO2Me)Ph.abs.txt due to invalid format.\n",
+      "Skipping file Q18_N-Confused_tetraphenylporphyrin.abs.txt due to invalid format.\n",
+      "Skipping file Q19_H4TPP2+.abs.txt due to invalid format.\n",
+      "Skipping file Q27_H2TBP(CO2Me)Ph.abs.txt due to invalid format.\n",
+      "Failed to retrieve data for synonym '14640-21-2' with status code: 404\n",
+      "Trying with name for MgTPP\n",
+      "Failed to retrieve data for synonym 'MgTPP' with status code: 404\n",
+      "Could not retrieve SMILES for MgTPP. Skipping the molecule.\n",
+      "No peaks found in ./../PhotochemCAD/Common Compounds/P01_107798-98-1_5-Phenyldipyrromethane.abs.txt with threshold 0.01.\n",
+      "No valid peaks found in P01_107798-98-1_5-Phenyldipyrromethane.abs.txt or error during extraction.\n",
+      "Skipping file T12_H2COxo-1.abs.txt due to invalid format.\n",
+      "Skipping file M03_Perylene_PMI(OR).abs.txt due to invalid format.\n",
+      "Skipping file T09_H2C-1.abs.txt due to invalid format.\n",
+      "Skipping file Q34_PdTBP(CO2Bu)Ph.abs.txt due to invalid format.\n",
+      "Skipping file R03_Sapphyrin.abs.txt due to invalid format.\n",
+      "Skipping file Q29_PdTBP(CO2Me)Ph.abs.txt due to invalid format.\n",
+      "Skipping file Q13_ZnTMP.abs.txt due to invalid format.\n",
+      "Skipping file Q25_ZnTBP(CO2Bu).abs.txt due to invalid format.\n",
+      "Failed to retrieve data for synonym '18472-87-2' with status code: 404\n",
+      "Trying with name for Phloxine_B\n",
+      "Failed to retrieve data for synonym '468083-01-4' with status code: 404\n",
+      "Trying with name for Perylene_PMI(OR)3\n",
+      "Failed to retrieve data for synonym 'Perylene PMI(OR)3' with status code: 404\n",
+      "Could not retrieve SMILES for Perylene_PMI(OR)3. Skipping the molecule.\n",
+      "Skipping file Q02_MgP.abs.txt due to invalid format.\n",
+      "Skipping file Q31_PdTCPH(CO2Me)Ph.abs.txt due to invalid format.\n",
+      "Failed to retrieve data for synonym '548-24-3' with status code: 404\n",
+      "Trying with name for Eosin_B\n",
+      "Failed to retrieve data for synonym 'Eosin B' with status code: 404\n",
+      "Could not retrieve SMILES for Eosin_B. Skipping the molecule.\n",
+      "Skipping file T13_MgCOxo-1.abs.txt due to invalid format.\n",
+      "Skipping file P05_N,N'-Difluoroboryl-1,9-dimethyl-5-[(4-(2-TMS-ethynyl)pheny]dipyrrin.abs.txt due to invalid format.\n",
+      "Failed to retrieve data for synonym '17372-87-1' with status code: 404\n",
+      "Trying with name for Eosin_Y\n",
+      "Failed to retrieve data for synonym 'Eosin Y' with status code: 404\n",
+      "Could not retrieve SMILES for Eosin_Y. Skipping the molecule.\n",
+      "Skipping file P03_N,N'-Difluoroboryl-1,9-dimethyl-5-phenydipyrrin.abs.txt due to invalid format.\n",
+      "Skipping file Q24_H2TBP(CO2Bu).abs.txt due to invalid format.\n",
+      "Skipping file P07_Bis(5-mesityldipyrrinato)zinc.abs.txt due to invalid format.\n",
+      "Skipping file A09_ 87-85-4_Hexamethylbenzene.abs.txt due to invalid format.\n",
+      "Skipping file Q32_H2TBP(CO2Bu)Ph.abs.txt due to invalid format.\n",
+      "Skipping file T11_ZnC-1.abs.txt due to invalid format.\n",
+      "Skipping file Q33_ZnTBP(CO2Bu)Ph.abs.txt due to invalid format.\n"
+     ]
+    }
+   ],
    "source": [
     "data = []\n",
     "processed_molecules = set()\n",
@@ -296,9 +399,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data saved to ./../data/molecular_data.csv\n"
+     ]
+    }
+   ],
    "source": [
     "df = pd.DataFrame(data)\n",
     "df.to_csv(output_file, index=False)\n",
