--- a/notebooks/rf_model_pipeline.ipynb
+++ b/notebooks/rf_model_pipeline.ipynb
@@ -4,14 +4,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Import Dependencies & Modules"
+    "1. Import Dependencies & Modules"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO: Enabling RDKit 2024.09.2 jupyter extensions\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import sys\n",
@@ -29,6 +37,7 @@
     "    evaluate_model,\n",
     "    plot_results\n",
     ")\n",
+    "from src.data_processing import extract_molecular_data, process_molecular_csv\n",
     "\n",
     "sns.set(style=\"whitegrid\")"
    ]
@@ -37,12 +46,123 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Load Training & Test Data"
+    "2. Data Processing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Extracting molecular data:   3%|▎         | 10/338 [00:06<03:48,  1.44file/s]WARNING: Attempt 1: Failed to retrieve data for 7659-95-2 (status 404).\n",
+      "Extracting molecular data:   9%|▉         | 31/338 [00:22<02:58,  1.72file/s]WARNING: Attempt 1: Failed to retrieve data for 118762-53-1 (status 404).\n",
+      "WARNING: Attempt 1: Failed to retrieve data for 5-Phenyldipyrrin (status 404).\n",
+      "WARNING: Could not retrieve SMILES for 5-Phenyldipyrrin. Skipping the molecule.\n",
+      "Extracting molecular data:  14%|█▎        | 46/338 [00:33<03:22,  1.44file/s]WARNING: Skipping file P04_N,N'-Difluoroboryl-1,9-dimethyl-5-(4-iodophenyl)dipyrrin.abs.txt due to invalid format.\n",
+      "Extracting molecular data:  20%|█▉        | 67/338 [00:49<04:12,  1.07file/s]WARNING: Skipping file Q26_PdTBP(CO2Bu).abs.txt due to invalid format.\n",
+      "Extracting molecular data:  21%|██▏       | 72/338 [00:52<02:59,  1.48file/s]WARNING: Skipping file T14_CuCOxo-1.abs.txt due to invalid format.\n",
+      "Extracting molecular data:  22%|██▏       | 74/338 [00:52<02:14,  1.97file/s]WARNING: Skipping file Q20_ZnTMP+.abs.txt due to invalid format.\n",
+      "Extracting molecular data:  23%|██▎       | 77/338 [00:53<01:50,  2.37file/s]WARNING: Skipping file P06_Bis(5-phenyldipyrrinato)zinc.abs.txt due to invalid format.\n",
+      "Extracting molecular data:  25%|██▌       | 85/338 [00:56<01:41,  2.49file/s]WARNING: Skipping file Q30_ZnTCPH(CO2Me)Ph.abs.txt due to invalid format.\n",
+      "Extracting molecular data:  30%|██▉       | 100/338 [01:04<01:43,  2.30file/s]WARNING: Skipping file Q03_ZnP.abs.txt due to invalid format.\n",
+      "Extracting molecular data:  33%|███▎      | 112/338 [01:09<01:50,  2.05file/s]ERROR: Unexpected error for 458-37-7: HTTPSConnectionPool(host='pubchem.ncbi.nlm.nih.gov', port=443): Max retries exceeded with url: /rest/pug/compound/name/458-37-7/property/IsomericSMILES/txt (Caused by NewConnectionError('<urllib3.connection.HTTPSConnection object at 0x301f74bf0>: Failed to establish a new connection: [Errno 12] Cannot allocate memory'))\n",
+      "Extracting molecular data:  34%|███▍      | 116/338 [01:11<01:48,  2.04file/s]WARNING: Skipping file T10_CuC-1.abs.txt due to invalid format.\n",
+      "Extracting molecular data:  36%|███▌      | 122/338 [01:13<01:37,  2.21file/s]WARNING: Attempt 1: Failed to retrieve data for 15185-47-4 (status 404).\n",
+      "WARNING: Attempt 1: Failed to retrieve data for 1,1'-Diethyl-3,3,3',3'-tetramethylindotricarbocyanine iodide (status 404).\n",
+      "WARNING: Could not retrieve SMILES for 1,1'-Diethyl-3,3,3',3'-tetramethylindotricarbocyanine_iodide. Skipping the molecule.\n",
+      "Extracting molecular data:  37%|███▋      | 125/338 [01:15<01:57,  1.81file/s]WARNING: Attempt 1: Failed to retrieve data for 262280-80-8 (status 404).\n",
+      "WARNING: Attempt 1: Failed to retrieve data for C6F5-Corrole (status 404).\n",
+      "WARNING: Could not retrieve SMILES for C6F5-Corrole. Skipping the molecule.\n",
+      "Extracting molecular data:  40%|███▉      | 135/338 [01:20<01:37,  2.09file/s]WARNING: Attempt 1: Failed to retrieve data for 8004-87-3 (status 404).\n",
+      "WARNING: Attempt 1: Failed to retrieve data for Methy Violet (status 404).\n",
+      "WARNING: Could not retrieve SMILES for Methy_Violet. Skipping the molecule.\n",
+      "Extracting molecular data:  42%|████▏     | 141/338 [01:23<01:33,  2.11file/s]WARNING: Skipping file Q12_MgTMP.abs.txt due to invalid format.\n",
+      "Extracting molecular data:  43%|████▎     | 147/338 [01:25<01:20,  2.38file/s]WARNING: Attempt 1: Failed to retrieve data for 1661-03-6 (status 404).\n",
+      "Extracting molecular data:  46%|████▌     | 155/338 [01:29<01:20,  2.27file/s]WARNING: Attempt 1: Failed to retrieve data for 2669-65-0 (status 404).\n",
+      "WARNING: Attempt 1: Failed to retrieve data for H2TPC (status 404).\n",
+      "WARNING: Could not retrieve SMILES for H2TPC. Skipping the molecule.\n",
+      "Extracting molecular data:  52%|█████▏    | 176/338 [01:40<01:20,  2.02file/s]WARNING: Skipping file T15_ZnCOxo-1.abs.txt due to invalid format.\n",
+      "Extracting molecular data:  57%|█████▋    | 193/338 [01:47<01:10,  2.06file/s]WARNING: Attempt 1: Failed to retrieve data for 35984-93-1 (status 404).\n",
+      "WARNING: Attempt 1: Failed to retrieve data for H2Pc(tBu) (status 404).\n",
+      "WARNING: Could not retrieve SMILES for H2Pc(tBu). Skipping the molecule.\n",
+      "Extracting molecular data:  59%|█████▉    | 201/338 [01:51<00:58,  2.35file/s]WARNING: Skipping file Q28_ZnTBP(CO2Me)Ph.abs.txt due to invalid format.\n",
+      "Extracting molecular data:  60%|██████    | 203/338 [01:51<00:44,  3.00file/s]WARNING: Skipping file Q18_N-Confused_tetraphenylporphyrin.abs.txt due to invalid format.\n",
+      "Extracting molecular data:  61%|██████    | 207/338 [01:53<00:47,  2.74file/s]WARNING: Skipping file Q19_H4TPP2+.abs.txt due to invalid format.\n",
+      "Extracting molecular data:  64%|██████▍   | 217/338 [01:57<00:59,  2.03file/s]WARNING: Skipping file Q27_H2TBP(CO2Me)Ph.abs.txt due to invalid format.\n",
+      "Extracting molecular data:  65%|██████▍   | 219/338 [01:58<00:51,  2.32file/s]WARNING: Attempt 1: Failed to retrieve data for 14640-21-2 (status 404).\n",
+      "WARNING: Attempt 1: Failed to retrieve data for MgTPP (status 404).\n",
+      "WARNING: Could not retrieve SMILES for MgTPP. Skipping the molecule.\n",
+      "Extracting molecular data:  65%|██████▌   | 220/338 [01:59<00:59,  1.97file/s]INFO: No peaks found in /Users/madahian/Documents/Codes/Digital Alchemy/data/raw/PhotochemCAD/Common Compounds/P01_107798-98-1_5-Phenyldipyrromethane.abs.txt with threshold 0.01.\n",
+      "WARNING: No valid peaks found in P01_107798-98-1_5-Phenyldipyrromethane.abs.txt or error during extraction.\n",
+      "Extracting molecular data:  66%|██████▌   | 223/338 [02:00<00:52,  2.17file/s]WARNING: Skipping file T12_H2COxo-1.abs.txt due to invalid format.\n",
+      "Extracting molecular data:  67%|██████▋   | 226/338 [02:01<00:45,  2.44file/s]WARNING: Skipping file M03_Perylene_PMI(OR).abs.txt due to invalid format.\n",
+      "Extracting molecular data:  71%|███████   | 239/338 [02:07<00:45,  2.19file/s]WARNING: Skipping file T09_H2C-1.abs.txt due to invalid format.\n",
+      "Extracting molecular data:  72%|███████▏  | 243/338 [02:08<00:42,  2.25file/s]WARNING: Skipping file Q34_PdTBP(CO2Bu)Ph.abs.txt due to invalid format.\n",
+      "Extracting molecular data:  72%|███████▏  | 245/338 [02:09<00:38,  2.42file/s]ERROR: Unexpected error for 14187-31-6: HTTPSConnectionPool(host='pubchem.ncbi.nlm.nih.gov', port=443): Max retries exceeded with url: /rest/pug/compound/name/14187-31-6/property/IsomericSMILES/txt (Caused by NewConnectionError('<urllib3.connection.HTTPSConnection object at 0x301f38080>: Failed to establish a new connection: [Errno 12] Cannot allocate memory'))\n",
+      "Extracting molecular data:  73%|███████▎  | 248/338 [02:10<00:38,  2.32file/s]WARNING: Skipping file R03_Sapphyrin.abs.txt due to invalid format.\n",
+      "Extracting molecular data:  74%|███████▍  | 250/338 [02:11<00:29,  2.99file/s]WARNING: Skipping file Q29_PdTBP(CO2Me)Ph.abs.txt due to invalid format.\n",
+      "Extracting molecular data:  75%|███████▍  | 252/338 [02:11<00:25,  3.35file/s]WARNING: Skipping file Q13_ZnTMP.abs.txt due to invalid format.\n",
+      "Extracting molecular data:  77%|███████▋  | 259/338 [02:14<00:30,  2.62file/s]WARNING: Skipping file Q25_ZnTBP(CO2Bu).abs.txt due to invalid format.\n",
+      "Extracting molecular data:  77%|███████▋  | 261/338 [02:14<00:22,  3.36file/s]WARNING: Attempt 1: Failed to retrieve data for 18472-87-2 (status 404).\n",
+      "Extracting molecular data:  80%|███████▉  | 270/338 [02:19<00:32,  2.12file/s]WARNING: Attempt 1: Failed to retrieve data for 468083-01-4 (status 404).\n",
+      "WARNING: Attempt 1: Failed to retrieve data for Perylene PMI(OR)3 (status 404).\n",
+      "WARNING: Could not retrieve SMILES for Perylene_PMI(OR)3. Skipping the molecule.\n",
+      "Extracting molecular data:  81%|████████  | 273/338 [02:21<00:32,  2.00file/s]WARNING: Skipping file Q02_MgP.abs.txt due to invalid format.\n",
+      "Extracting molecular data:  83%|████████▎ | 280/338 [02:24<00:25,  2.28file/s]ERROR: Unexpected error for 635-12-1: HTTPSConnectionPool(host='pubchem.ncbi.nlm.nih.gov', port=443): Max retries exceeded with url: /rest/pug/compound/name/635-12-1/property/IsomericSMILES/txt (Caused by NewConnectionError('<urllib3.connection.HTTPSConnection object at 0x301fcd0d0>: Failed to establish a new connection: [Errno 12] Cannot allocate memory'))\n",
+      "Extracting molecular data:  83%|████████▎ | 282/338 [02:25<00:26,  2.11file/s]WARNING: Skipping file Q31_PdTCPH(CO2Me)Ph.abs.txt due to invalid format.\n",
+      "WARNING: Attempt 1: Failed to retrieve data for 548-24-3 (status 404).\n",
+      "WARNING: Attempt 1: Failed to retrieve data for Eosin B (status 404).\n",
+      "WARNING: Could not retrieve SMILES for Eosin_B. Skipping the molecule.\n",
+      "Extracting molecular data:  84%|████████▍ | 285/338 [02:26<00:22,  2.35file/s]WARNING: Skipping file T13_MgCOxo-1.abs.txt due to invalid format.\n",
+      "Extracting molecular data:  86%|████████▌ | 290/338 [02:28<00:19,  2.50file/s]WARNING: Skipping file P05_N,N'-Difluoroboryl-1,9-dimethyl-5-[(4-(2-TMS-ethynyl)pheny]dipyrrin.abs.txt due to invalid format.\n",
+      "Extracting molecular data:  87%|████████▋ | 294/338 [02:29<00:17,  2.56file/s]WARNING: Attempt 1: Failed to retrieve data for 17372-87-1 (status 404).\n",
+      "WARNING: Attempt 1: Failed to retrieve data for Eosin Y (status 404).\n",
+      "WARNING: Could not retrieve SMILES for Eosin_Y. Skipping the molecule.\n",
+      "Extracting molecular data:  88%|████████▊ | 297/338 [02:31<00:20,  2.03file/s]WARNING: Skipping file P03_N,N'-Difluoroboryl-1,9-dimethyl-5-phenydipyrrin.abs.txt due to invalid format.\n",
+      "Extracting molecular data:  91%|█████████ | 306/338 [02:35<00:16,  1.97file/s]WARNING: Skipping file Q24_H2TBP(CO2Bu).abs.txt due to invalid format.\n",
+      "Extracting molecular data:  92%|█████████▏| 310/338 [02:36<00:11,  2.49file/s]WARNING: Skipping file P07_Bis(5-mesityldipyrrinato)zinc.abs.txt due to invalid format.\n",
+      "Extracting molecular data:  92%|█████████▏| 312/338 [02:37<00:08,  3.20file/s]WARNING: Skipping file A09_ 87-85-4_Hexamethylbenzene.abs.txt due to invalid format.\n",
+      "WARNING: Skipping file Q32_H2TBP(CO2Bu)Ph.abs.txt due to invalid format.\n",
+      "Extracting molecular data:  94%|█████████▍| 319/338 [02:40<00:08,  2.33file/s]WARNING: Skipping file T11_ZnC-1.abs.txt due to invalid format.\n",
+      "Extracting molecular data:  96%|█████████▌| 324/338 [02:41<00:05,  2.46file/s]WARNING: Skipping file Q33_ZnTBP(CO2Bu)Ph.abs.txt due to invalid format.\n",
+      "Extracting molecular data: 100%|██████████| 338/338 [02:48<00:00,  2.01file/s]\n",
+      "INFO: 294/338 molecules successfully processed.\n",
+      "[13:51:14] WARNING: not removing hydrogen atom without neighbors\n",
+      "[13:51:14] WARNING: not removing hydrogen atom without neighbors\n",
+      "[13:51:14] WARNING: not removing hydrogen atom without neighbors\n"
+     ]
+    }
+   ],
+   "source": [
+    "raw_dir = os.path.join(config.RAW_DATA_DIR, \"PhotochemCAD\", \"Common Compounds\")\n",
+    "processed_dir = config.PROCESSED_DATA_DIR\n",
+    "os.makedirs(processed_dir, exist_ok=True)\n",
+    "\n",
+    "molecular_csv = config.MOLECULAR_DATA_CSV\n",
+    "train_csv = config.TRAIN_DATA_CSV\n",
+    "test_csv = config.TEST_DATA_CSV\n",
+    "\n",
+    "# Step 1: Extract data from raw files to generate molecular_data.csv\n",
+    "extract_molecular_data(raw_dir, molecular_csv, max_peaks=config.MAX_PEAKS)\n",
+    "\n",
+    "# Step 2: Process molecular_data.csv to generate training and test CSVs\n",
+    "process_molecular_csv(molecular_csv, train_csv, test_csv)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. Load Training & Test Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -55,9 +175,6 @@
     }
    ],
    "source": [
-    "train_csv = config.TRAIN_DATA_CSV\n",
-    "test_csv = config.TEST_DATA_CSV\n",
-    "\n",
     "train_df = pd.read_csv(train_csv)\n",
     "test_df = pd.read_csv(test_csv)\n",
     "\n",
@@ -69,12 +186,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Prepare Features and Targets"
+    "4. Prepare Features and Targets"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -105,12 +222,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Train the Model"
+    "5. Train the Model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -149,12 +266,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Evaluate the Model"
+    "6. Evaluate the Model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -186,12 +303,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Visualize the Results"
+    "7. Visualize the Results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
